--- a/catalog.html
+++ b/catalog.html
@@ -258,8 +258,11 @@
                                                         <span class="catalog-title">CODE<br>HELIX</span>
                                                         <span class="catalog-author">by Nikki Dibya Wardhana,<br>Bryan
                                                             Arfiandy</span>
-                                                        <button class="btn btn-black" type="button">More Info <span
-                                                                class="glyphicon glyphicon-play"></span></button>
+                                                        <button class="btn btn-black" type="button">
+                                                            <a href="single-published.html">
+                                                                More Info <span class="glyphicon glyphicon-play"></span>
+                                                            </a>
+                                                        </button>
                                                     </div>
                                                     <div class="catalog-img-wrap reveal fade-right">
                                                         <img src="img/catalog-2.png">
@@ -269,8 +272,11 @@
                                                     <div class="catalog-item-wrap reveal fade-left">
                                                         <span class="catalog-title">LOREM<br>IPSUM DOLOR</span>
                                                         <span class="catalog-author">by Lorem Ipsum</span>
-                                                        <button class="btn btn-black" type="button">More Info <span
-                                                                class="glyphicon glyphicon-play"></span></button>
+                                                        <button class="btn btn-black" type="button">
+                                                            <a href="single-published.html">
+                                                                More Info <span class="glyphicon glyphicon-play"></span>
+                                                            </a>
+                                                        </button>
                                                     </div>
                                                     <div class="catalog-img-wrap reveal fade-right">
                                                         <img src="img/catalog-1.png">
@@ -445,7 +451,7 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit-icons.min.js"></script>
-    
+
     <script src="js/script.js"></script>
 
 </body>
